# scipp

./: .clang-format  .clang-tidy  .cmake-format.json  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  README.md  Untitled.ipynb  appveyor.yml  asd.py  asv.conf.json  azure-pipelines.yml  conanfile.txt  cppcheck-suppressions.txt  developer-extra.yml  pixi.toml  pyproject.toml  readthedocs.yml  requirements-docs.txt  scipp-developer-minimal.yml  scipp-developer-no-mantid.yml  scipp-developer-windows.yml  scipp-developer.yml  scipp-jupyter-demo.Dockerfile  setup.cfg  setup.py  tox.ini  ubuntu-latest.yml  vcpkg-configuration.json  vcpkg.json  (+1 more)
benchmark/: CMakeLists.txt  accumulate_benchmark.cpp  bin_benchmark.cpp  buckets_benchmark.cpp  common.h  dataset_benchmark.cpp  dataset_operations_benchmark.cpp  dataset_view_benchmark.cpp  element_array_view_benchmark.cpp  event_filter_benchmark.cpp  event_list_proxy_benchmark.cpp  events_histogram_op_benchmark.cpp  groupby_benchmark.cpp  histogram_benchmark.cpp  legacy_cow_ptr.h  legacy_dataset_benchmark.cpp  legacy_histogram_benchmark.cpp  md_zip_view_benchmark.cpp  multi_index_benchmark.cpp  neutron_convert_benchmark.cpp  slice_benchmark.cpp  sort_benchmark.cpp  sparse_histogram_op_benchmark.cpp  transform_benchmark.cpp  variable_benchmark.cpp  variable_common.h  variable_view_benchmark.cpp
common/: CMakeLists.txt
common/test/: CMakeLists.txt  deep_ptr_test.cpp  index_test.cpp  is_linspace_test.cpp  islinspace_test.cpp  numeric_test.cpp
conda/cmake-package-test/: CMakeLists.txt  (+3 more)
core/: CMakeLists.txt  aligned_allocator.h  apply.h  axis.cpp  bool.h  comparison.cpp  convert.cpp  convert.h  counts.cpp  counts.h  data_array.cpp  dataset.cpp  dataset.h  dataset_access.cpp  dataset_binary_arithmetic.cpp  dataset_index.h  dataset_next.cpp  dataset_next.h  dataset_operations.cpp  dataset_operations_common.h  dimension.h  dimensions.cpp  dimensions.h  dtype.cpp  dtype.h  element_array_view.cpp  element_event_operations.h  element_geometric_operations.h  element_trigonometry_operations.h  element_unary_operations.h  element_unary_operations.h.orig  event.cpp  event_list_proxy.h  events.cpp  events.h  except.cpp  except.h  function_traits.h  groupby.cpp  histogram.cpp  (+49 more)
dataset/: CMakeLists.txt  arithmetic.cpp  bin.cpp  bin_common.h  bins.cpp  bins_util.h  bucket.cpp  bucketby.cpp  counts.cpp  data_array.cpp  dataset.cpp  dataset_access.cpp  dataset_binary_arithmetic.cpp  dataset_operations.cpp  dataset_operations_common.h  event.cpp  except.cpp  groupby.cpp  histogram.cpp  map_view.cpp  math.cpp  operations.cpp  rebin.cpp  reduction.cpp  shape.cpp  slice.cpp  sort.cpp  special_values.cpp  string.cpp  to_unit.cpp  unaligned.cpp  util.cpp  variable_instantiate_bin_elements.cpp  variable_instantiate_bucket_elements.cpp  variable_instantiate_dataset.cpp  variable_reduction.cpp
lib/: CMakeLists.txt  conanfile.txt
neutron/: CMakeLists.txt  beamline.cpp  convert.cpp
python/: Binder.h  CMakeLists.txt  __init__.py  bind_data_access.h  bind_data_array.h  bind_detail.h  bind_enum.h  bind_free_function.cpp  bind_free_function.h  bind_operators.h  bind_slice_methods.h  bind_units.cpp  bins.cpp  buckets.cpp  choose.cpp  comparison.cpp  convolution.cpp  counts.cpp  creation.cpp  cumulative.cpp  dataset.cpp  dataset_collection.py  dataset_free_functions.cpp  dataset_plotting.py  datetime.h  detail.cpp  detail.h  dimensions.cpp  docstring.cpp  docstring.h  dtype.cpp  dtype.h  eigen.cpp  element_array_view.cpp  event_list.cpp  except.cpp  format.h  generated.cpp.in  geometry.cpp  groupby.cpp  (+42 more)
scippy/: CMakeLists.txt  __init__.py  bind_data_access.h  bind_enum.h  bind_math_methods.h  bind_slice_methods.h  dataset.cpp  dataset_collection.py  dimensions.cpp  dtype.cpp  dtype.h  numpy.h  plot.py  pytest.ini  requirements.txt  scippy.cpp  setup.py  table.py  test.py  units-neutron.cpp  units_neutron.cpp  variable.cpp  variable_view.cpp  xarray_compat.py
src/: CMakeLists.txt  aligned_allocator.h  bool.h  call_wrappers.h  composition.cpp  composition2.cpp  composition_exports.cpp  convert.cpp  convert.h  counts.cpp  counts.h  cow_ptr.h  dataset.cpp  dataset.h  dataset_index.h  dataset_view.cpp  dataset_view.h  dimension.h  dimensions.cpp  dimensions.h  draft1.cpp  draft3.cpp  draft4.cpp  event_list_proxy.h  events.cpp  events.h  except.cpp  except.h  function_traits.h  histogram.h  iterator.cpp  linear_view.h  main.cpp  md_zip_view.cpp  md_zip_view.h  memory_pool.h  multi_index.h  pybind.cpp  shared_cow_ptr.h  soa_aos_abstraction.cpp  (+10 more)
test/: CMakeLists.txt  EventWorkspace_test.cpp  Run_test.cpp  TableWorkspace_test.cpp  Workspace2D_test.cpp  bool_test.cpp  convert_test.cpp  copy_on_write_with_views_test.cpp  dataset_test.cpp  dataset_view_test.cpp  dimensions_test.cpp  event_list_proxy_test.cpp  example_instrument_test.cpp  except_test.cpp  fix_typed_test_suite_warnings.h  linear_view_test.cpp  md_zip_view_test.cpp  multi_index_test.cpp  random.h  tags_test.cpp  test_macros.h  test_matchers.cpp  test_matchers.h  test_nans.h  test_operations.h  test_random.cpp  test_random.h  test_util.h  unit_test.cpp  variable_test.cpp  variable_view_test.cpp  zip_view_test.cpp
units/: CMakeLists.txt  dim.cpp  dummy.cpp  except.cpp  neutron.cpp  simple.cpp  string.cpp  unit.cpp  unit_impl.h
variable/: CMakeLists.txt  arithmetic.cpp  astype.cpp  bin_array_variable.cpp  bin_detail.cpp  bin_util.cpp  binary_arithmetic.cpp  bins.cpp  buckets.cpp  comparison.cpp  convolution.cpp  creation.cpp  cumulative.cpp  event.cpp  except.cpp  inplace_arithmetic.cpp  logical.cpp  math.cpp  matrix.cpp  operations.cpp  operations_common.h  pow.cpp  rebin.cpp  reduction.cpp  rounding.cpp  shape.cpp  slice.cpp  sort.cpp  special_values.cpp  string.cpp  structures.cpp  subspan_view.cpp  to_unit.cpp  trigonometry.cpp  type_conversion.cpp  util.cpp  variable.cpp  variable_binary_arithmetic.cpp  variable_comparison.cpp  variable_concept.cpp  (+14 more)
(+2354 files in other folders)
