[build-system]
requires = [
  "setuptools>=68",
  "conan==1.62.0",
  "scikit-build-core"
]
build-backend = "scikit_build_core.build"

[project]
name = "scipp"
description = "Multi-dimensional data arrays with labeled dimensions"
readme = "README.md"
license = { "file" = "LICENSE" }
authors = [{ name = "Scipp contributors (https://github.com/scipp)" }]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
  "numpy >= 1.20",
]
dynamic = ["version"]

[project.urls]
"Documentation" = "https://scipp.github.io/"
"Source" = "https://github.com/scipp/scipp"
"Bug Tracker" = "https://github.com/scipp/scipp/issues"
"Changelog" = "https://scipp.github.io/about/release-notes.html"

[project.optional-dependencies]
test = [
  "pytest",
  "matplotlib",
  "bs4",
  "ipython",
]
all = [
  "h5py",
  "scipy>=1.7.0",
  "graphviz",
  "pooch",
  "plopp",
  "matplotlib"
]
interactive = [
    "ipympl",
    "ipython",
    "ipywidgets",
    "matplotlib",
    "jupyterlab",
    "jupyterlab-widgets",
    "jupyter_nbextensions_configurator",
    "nodejs",
    "plopp",
    "pythreejs",
]

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
cmake.version = ">=3.21"
wheel.install-dir = "scipp"

[tool.setuptools_scm]
version_file = "src/scipp/_version.py"

[tool.cibuildwheel]
archs = ["auto64"]
test-requires = ["scipy", "graphviz", "pooch"]
test-extras = ["test"]
test-command = "pytest --ignore {project}/tests/plotting --ignore {project}/tests/hypothesis/ --ignore {project}/tests/experimental/ {project}/tests"
# PyPy builds fail with an error about ninja, probably https://github.com/pypa/setuptools/issues/2912
# tbb-devel not available for musllinux
skip = ["pp*", "*musllinux*"]
build-verbosity = 1

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.bandit]
exclude_dirs = [
  "install",
  "conda/cmake-package-test",
  "tools",
  "setup.py",
  "docs/conf.py",
]

[tool.bandit.assert_used]
skips = [
  "*/*_test.py",
  "src/scipp/testing/assertions.py"
]

[tool.codespell]
ignore-words-list = "elemt"
skip = "./.git,./install,./build,./cmake-build*,./lib/cmake/sanitizers-cmake,./.tox,*/*_cache,*/.virtual_documents,*/.ipynb_checkpoints,*.pdf,*.svg"

[tool.black]
# Runs into a bug with this file. But since it is autogenerated, we don't want to reformat it anyway.
force-exclude = "src/scipp/core/cpp_classes.pyi"
skip-string-normalization = true

[tool.isort]
skip_gitignore = true
profile = "black"
skip_glob = ["src/scipp/__init__.py", "src/scipp/core/__init__.py"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = "tests"
addopts = """
--strict-config
--strict-markers
--import-mode=importlib
-ra
-v
"""
filterwarnings = [
  'error',
  'ignore:You are running a "Debug" build of scipp:',
  # From Hypothesis; unclear why it warns, this seems to be an internal bug.
  'ignore:The recursion limit will not be reset',
  'ignore:sc.geometry.rotation_matrix_from_quaternion_coeffs has been deprecated:scipp.VisibleDeprecationWarning',
  # Comes from pytest_asyncio and is not our fault.
  "ignore:The 'asyncio_mode' default value will change to 'strict' in future:DeprecationWarning",
  'ignore::scipy.optimize._optimize.OptimizeWarning',
  'ignore:Support for mapping types has been deprecated and will be dropped in a future release.:DeprecationWarning',
  'ignore:sc.DataArray.attrs has been deprecated:scipp.VisibleDeprecationWarning',
]
